--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -28,7 +28,7 @@
     "**/*.tsx",
     ".next/types/**/*.ts",
     ".next/dev/types/**/*.ts",
-    "**/*.mts"
-  ],
+    "**/*.mts",    
+    "src/app/style/components"  ],
   "exclude": ["node_modules"]
 }
