--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "react-easy-crop": "^5.5.6",
+    "react-image-crop": "^10.0.0",
     "zustand": "^5.0.9"
   },
   "devDependencies": {
