--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,32 +1,34 @@
 {
-    "name": "frontend",
-    "version": "0.1.0",
-    "private": true,
-    "scripts": {
-      "dev": "next dev",
-      "build": "next build",
-      "start": "next start",
-      "lint": "eslint"
-    },
-    "dependencies": {
-      "@supabase/auth-helpers-nextjs": "^0.15.0",
-      "@supabase/supabase-js": "^2.89.0",
-      "axios": "^1.13.2",
-      "colorthief": "^2.6.0",
-      "lucide-react": "^0.562.0",
-      "next": "16.1.1",
-      "react": "19.2.3",
-      "react-dom": "19.2.3",
-      "zustand": "^5.0.9"
-    },
-    "devDependencies": {
-      "@tailwindcss/postcss": "^4",
-      "@types/node": "^20",
-      "@types/react": "^19",
-      "@types/react-dom": "^19",
-      "eslint": "^9",
-      "eslint-config-next": "16.1.1",
-      "tailwindcss": "^4",
-      "typescript": "^5"
-    }
+  "name": "frontend",
+  "version": "0.1.0",
+  "private": true,
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "eslint"
+  },
+  "dependencies": {
+    "@supabase/auth-helpers-nextjs": "^0.15.0",
+    "@supabase/supabase-js": "^2.89.0",
+    "axios": "^1.13.2",
+    "colorthief": "^2.6.0",
+    "lucide-react": "^0.562.0",
+    "next": "16.1.1",
+    "react": "19.2.3",
+    "react-dom": "19.2.3",
+    "react-easy-crop": "^5.5.6",
+    "zustand": "^5.0.9"
+  },
+  "devDependencies": {
+    "@tailwindcss/postcss": "^4",
+    "@types/colorthief": "^2.6.0",
+    "@types/node": "^20",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
+    "eslint": "^9",
+    "eslint-config-next": "16.1.1",
+    "tailwindcss": "^4",
+    "typescript": "^5"
   }
+}
