added dev stage and skip npm run build

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -4,11 +4,14 @@ WORKDIR /app
 COPY package.json package-lock.json* ./
 RUN npm ci
 
-# Stage 2: Build the application
-FROM node:20-alpine AS builder
+# Stage 2: Dev (all source + deps, no build step)
+FROM node:20-alpine AS dev
 WORKDIR /app
 COPY --from=deps /app/node_modules ./node_modules
 COPY . .
+
+# Stage 3: Build the application
+FROM dev AS builder
 
 ARG NEXT_PUBLIC_SUPABASE_URL
 ARG NEXT_PUBLIC_SUPABASE_ANON_KEY
@@ -20,7 +23,7 @@ ENV NEXT_PUBLIC_API_URL=$NEXT_PUBLIC_API_URL
 
 RUN npm run build
 
-# Stage 3: Production runner
+# Stage 4: Production runner
 FROM node:20-alpine AS runner
 WORKDIR /app
 
