--- a/backend/.env.example
+++ b/backend/.env.example
@@ -8,7 +8,10 @@ SUPABASE_JWT_SECRET=your-jwt-secret
 GEMINI_API_KEY=your-gemini-api-key
 
 # CORS (comma-separated origins)
+# Development:
 CORS_ORIGINS=http://localhost:3000,http://localhost:3001
+# Production:
+# CORS_ORIGINS=https://styleit.me,https://www.styleit.me
 
-# Environment
+# Environment (development | production)
 ENVIRONMENT=development
